- eliminati i file di test/gui - fatti funzionare i test - passato a jewel come package manager

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,6 @@
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
-auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=default
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
 file.reference.common-bin=bin
 file.reference.common-lib=lib
 file.reference.common-test=test
@@ -10,4 +10,4 @@ ruby.includejava=false
 source.encoding=UTF-8
 src.bin.dir=bin
 src.lib.dir=lib
-src.test.dir=test
+test.test.dir=test
