--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
-file.reference.common-bin=D:\\GioPrj\\projects.git\\ralbum-common\\bin
-file.reference.common-lib=D:\\GioPrj\\projects.git\\ralbum-common\\lib
-file.reference.common-test=D:\\GioPrj\\projects.git\\ralbum-common\\test
+file.reference.common-bin=D:\\GioPrj\\projects.git\\tree_visitor\\bin
+file.reference.common-lib=D:\\GioPrj\\projects.git\\tree_visitor\\lib
+file.reference.common-test=D:\\GioPrj\\projects.git\\tree_visitor\\test
