renamed dirtree to tree added test for cli added -a options to cli

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,7 +5,7 @@ file.reference.common-bin=bin
 file.reference.common-lib=lib
 file.reference.common-test=test
 javac.classpath=
-main.file=permutazioni.rb
+main.file=tree.rb
 ruby.includejava=false
 source.encoding=UTF-8
 src.bin.dir=bin
