--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,23 @@
 *~
 *.bak
-pkg
-*.sw?
-.DS_Store
+.bundle
+.config
 coverage
-rdoc
-nbproject
+doc/
+.DS_Store
+*.gem
 .idea
+InstalledFiles
+lib/bundler/man
+nbproject
+pkg
+*.rbc
+rdoc
+spec/reports
+*.sw?
+test/tmp
+test/version_tmp
+tmp
+_yardoc
 .yardoc
-doc
+.yardoc
